--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kibuli Nursery School</title>
+    <title>Kibuli Muslim Nursery School</title>
     <meta name="description" content="Nurturing young minds at Kibuli Nursery School" />
     <meta name="author" content="Kibuli Nursery School" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/logo.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap">
   </head>
 
